proj1/tests/correct/for_multiple.py
for i in (1, 2, 3):
	print i
else:
	print 'here'

for i in 1, 2, 3: print 'here'
else: print i
