proj1/tests/error/funcdef_error.py
for x in (1, 2):
	def a():
		print x
